--- a/index.html
+++ b/index.html
@@ -271,23 +271,23 @@ body, html {height: 100%}
     <div class="w3-container">
       <center><img src="s1.jpg" style="width:50%"></center>
       <center><h5>NO.<b>s-1</b></h5><del>Price 350฿</del><br/><font color="Red"><b>SALE 175฿</b></font></center>
-      <center><img src="s2.jpg" style="width:50%"></center>
+      <center><img src="s2.jpg" style="width:50%"></center><br/>
       <center><h5>NO.<b>s-2</b></h5><del>Price 300฿</del><br/><font color="Red"><b>SALE 150฿</b></font></center>
-      <center><img src="s3.jpg" style="width:50%"></center>
+      <center><img src="s3.jpg" style="width:50%"></center><br/>
       <center><h5>NO.<b>s-3</b></h5><del>Price 400฿</del><br/><font color="Red"><b>SALE 200฿</b></font></center>
-      <center><img src="s4.jpg" style="width:50%"></center>
+      <center><img src="s4.jpg" style="width:50%"></center><br/>
       <center><h5>NO.<b>s-4</b></h5><del>Price 200฿</del><br/><font color="Red"><b>SALE 100฿</b></font></center>
-      <center><img src="s5.jpg" style="width:50%"></center>
+      <center><img src="s5.jpg" style="width:50%"></center><br/>
       <center><h5>NO.<b>s-5</b></h5><del>Price 150฿</del><br/><font color="Red"><b>SALE 75฿</b></font></center>
-      <center><img src="s6.jpg" style="width:50%"></center>
+      <center><img src="s6.jpg" style="width:50%"></center><br/>
       <center><h5>NO.<b>s-6</b></h5><del>Price 250฿</del><br/><font color="Red"><b>SALE 125฿</b></font></center>
-      <center><img src="s7.jpg" style="width:50%"></center>
+      <center><img src="s7.jpg" style="width:50%"></center><br/>
       <center><h5>NO.<b>s-7</b></h5><del>Price 150฿</del><br/><font color="Red"><b>SALE 75฿</b></font></center>
-      <center><img src="s8.jpg" style="width:50%"></center>
+      <center><img src="s8.jpg" style="width:50%"></center><br/>
       <center><h5>NO.<b>s-8</b></h5><del>Price 300฿</del><br/><font color="Red"><b>SALE 150฿</b></font></center>
-      <center><img src="s9.jpg" style="width:50%"></center>
+      <center><img src="s9.jpg" style="width:50%"></center><br/>
       <center><h5>NO.<b>s-9</b></h5><del>Price 300฿</del><br/><font color="Red"><b>SALE 150฿</b></font></center>
-      <center><img src="s10.jpg" style="width:50%"></center>
+      <center><img src="s10.jpg" style="width:50%"></center><br/>
       <center><h5>NO.<b>s-10</b></h5><del>Price 350฿</del><br/><font color="Red"><b>SALE 175฿</b></font></center>
     </div>
   </div>
@@ -336,10 +336,10 @@ body, html {height: 100%}
       <h1>contact us</h1>
     </div>
     <div class="w3-section">
-      <p><i class="fa fa-map-marker fa-fw w3-text-white w3-xxlarge w3-margin-right"></i> Location: 99 Bangkok St, Thailand</p>
-      <p><i class="fa fa-phone fa-fw w3-text-white w3-xxlarge w3-margin-right"></i> Phone: +66937096455</p>
-      <p><i class="fa fa-envelope fa-fw w3-text-white w3-xxlarge w3-margin-right"> </i> Email: Thisisme@gmail.com</p>
-      <p><i class="fa fa-map-marker fa-fw w3-text-white w3-xxlarge w3-margin-right"></i> Facebook:  <a href="https://web.facebook.com/Thiss-ME-store-112226490469455/">This's ME store</a></p>
+      <p><i class="fa fa-map-marker fa-fw w3-text-Black w3-xxlarge w3-margin-right"></i> Location: 99 Bangkok St, Thailand</p>
+      <p><i class="fa fa-phone fa-fw w3-text-ฺBlack w3-xxlarge w3-margin-right"></i> Phone: +66937096455</p>
+      <p><i class="fa fa-envelope fa-fw w3-text-Black w3-xxlarge w3-margin-right"> </i> Email: Thisisme@gmail.com</p>
+      <p><i class="fa fa-map-marker fa-fw w3-text-ฺBlack w3-xxlarge w3-margin-right"></i> Facebook:  <a href="https://web.facebook.com/Thiss-ME-store-112226490469455/">This's ME store</a></p>
     </div>
   </div>
 </div>
