--- a/index.html
+++ b/index.html
@@ -336,7 +336,7 @@ body, html {height: 100%}
       <h1>contact us</h1>
     </div>
     <div class="w3-section">
-      <center><p><i class="fa fa-map-marker fa-fw w3-text-Black w3-xxlarge w3-margin-right"></i> Location: 99 Bangkok St, Thailand</p></center>
+      <p><i class="fa fa-map-marker fa-fw w3-text-Black w3-xxlarge w3-margin-right"></i> Location: 99 Bangkok St, Thailand</p>
       <p><i class="fa fa-phone fa-fw w3-text-ฺBlack w3-xxlarge w3-margin-right"></i> Phone: +66937096455</p>
       <p><i class="fa fa-envelope fa-fw w3-text-Black w3-xxlarge w3-margin-right"> </i> Email: Thisisme@gmail.com</p>
       <p><i class="fa fa-map-marker fa-fw w3-text-ฺBlack w3-xxlarge w3-margin-right"></i> Facebook:  <a href="https://web.facebook.com/Thiss-ME-store-112226490469455/">This's ME store</a></p>
