--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@ body, html {height: 100%}
       <center><h5>NO.<b>04-5</b></h5></center><br/>
       
      <div class="w3-container w3-black">
-      <font color="orange"><h1>Bags</h1></font>
+      <font color="blue"><h1>Bags</h1></font>
     </div>
     <div class="w3-container">
       <center><img src="21.jpg" style="width:50%"></center>
@@ -220,7 +220,7 @@ body, html {height: 100%}
       <center><h5>NO.<b>04-5</b> Boots<br/>Size(EU): 36-42<br/>Color: Black,Brown<br/>Price 790฿</h5></center><br/>
       
     <div class="w3-container w3-black">
-      <font color="orange"><h1>Bags details</h1></font>
+      <font color="blue"><h1>Bags details</h1></font>
     </div>
     <div class="w3-container">
       <center><img src="05-1.jpg" style="width:50%"></center>
