--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@ body, html {height: 100%}
       <center><h5>NO.<b>04-5</b></h5></center><br/>
       
      <div class="w3-container w3-black">
-      <font color="blue"><h1>Bags</h1></font>
+      <font color="PaleTurquoise"><h1>Bags</h1></font>
     </div>
     <div class="w3-container">
       <center><img src="21.jpg" style="width:50%"></center>
