--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@ body, html {height: 100%}
       
     </div>
      <div class="w3-container w3-black">
-      <h1>Shirts</h1>
+      <h1>Shirts</h1><br/>
     </div>
     <div class="w3-container">
       <center><img src="01.jpg" style="width:50%"></center>
@@ -107,6 +107,7 @@ body, html {height: 100%}
       <center><h5>NO.<b>04-4</b></h5></center><br/>
       <center><img src="15.jpg" style="width:50%"></center>
       <center><h5>NO.<b>04-5</b></h5></center><br/>
+    </div>
       
      <div class="w3-container w3-black">
       <font color="PaleTurquoise"><h1>Bags</h1></font>
