--- a/index.html
+++ b/index.html
@@ -219,6 +219,7 @@ body, html {height: 100%}
       <center><h5>NO.<b>04-4</b> Slippers<br/>Size(EU): 35-41<br/>Color: White,Beige,Pink,Dark spring green<br/>Price 290฿</h5></center><br/>
       <center><img src="04-5.jpg" style="width:50%"></center>
       <center><h5>NO.<b>04-5</b> Boots<br/>Size(EU): 36-42<br/>Color: Black,Brown<br/>Price 790฿</h5></center><br/>
+    </div>
       
     <div class="w3-container w3-black">
       <font color="PaleTurquoise"><h1>Bags details</h1></font>
