--- a/index.html
+++ b/index.html
@@ -267,7 +267,7 @@ body, html {height: 100%}
       
     </div>
      <div class="w3-container w3-black">
-       <font color="red"><Blink><h1><p>SALE!!!</p></h1></Blink></font>
+       <marquee direction="right"><font color="red"><h1>SALE!!!</h1></font></marquee> 
     </div>
     <div class="w3-container">
       <center><img src="s1.jpg" style="width:50%"></center>
