--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@ body, html {height: 100%}
       
     </div>
      <div class="w3-container w3-black">
-      <h1>Shirts</h1><br/>
+      <h1>Shirts</h1>
     </div>
     <div class="w3-container">
       <center><img src="01.jpg" style="width:50%"></center>
@@ -267,7 +267,7 @@ body, html {height: 100%}
       
     </div>
      <div class="w3-container w3-black">
-       <marquee direction="right"><font color="red"><h1>SALE!!!</h1></font></marquee> 
+       <font color="red"><h1><b>SALE!!!</b></h1></font>
     </div>
     <div class="w3-container">
       <center><img src="s1.jpg" style="width:50%"></center>
