--- a/index.html
+++ b/index.html
@@ -19,7 +19,8 @@ body, html {height: 100%}
 
 <div class="bgimg w3-display-container w3-text-black">
   <div class="w3-display-middle w3-jumbo">
-    <center><p><b>THIS'S ME</b></p></center><br/>STORE
+    <center><p><b>THIS'S ME</b></p></center>
+    <center><p><h5>STORE</h></p></center>
   </div>
   <div class="w3-display-topleft w3-container w3-xlarge">
     <p><button onclick="document.getElementById('menu').style.display='block'" class="w3-button w3-black">product catalog</button></p>
